<resources>
    <string name="app_name">ServiceNovigrad</string>

    <string name="welcome">WELCOME</string>
    <string name="to">to</string>
    <string name="service_novigrad">Service Novigrad</string>

    <string name="to_services_list">To Services List</string>
    <string name="to_customer_list">To Customer List</string>
    <string name="to_branch_list">To Branch List</string>

    <string name="delete">Delete</string>
    <string name="add_new">Add New</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>

    <string name="customer_list">Customer List</string>
    <string name="branch_list">Branch List</string>
    <string name="services_list">Services List</string>

    <string name="back_to_welcome_screen">Back to Welcome screen</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="not_registered_sign_up_here">not registered? sign up here!</string>
    <string name="already_a_user_login_here">Already a User? Login Here.</string>

    <string name="please_select_a_role">Please Select a Role</string>
    <string name="employee">Employee</string>
    <string name="customer">Customer</string>
    <string name="service_name_choice">Service Information</string>
    <string name="create_service_title">Create Service</string>
    <string name="create_service_submit">Submit Service</string>
    <string name="create_service_add">Add Service Information</string>
    <string name="services_offered">Services Offered</string>
    <string name="service_requests">Service Requests</string>
    <string name="hours_open">Hours Open</string>

    <string name="return_to_branch_menu">Return to main menu</string>

    <string name="current_hours_open">Current Hours Open</string>
    <string name="change_hours_instructions">Hold on the hour change it</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="opening_hour">Opening Hour:</string>
    <string name="closing_hour">Closing Hour:</string>
    <string name="colon">:</string>

    <string name="delete_intructions">To delete, press and hold on the email</string>
    <string name="title_activity_branch_main">BranchMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="branch_hours_title">Branch Hours</string>

    <string name="branch_decide_request_title">Approve or Reject</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>

    <string name="search_branch">Search For Branch</string>

    <string name="submit_service_request">Submit</string>
    <string name="create_service_request_title">Create Service Request</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="search_branch_by_address_titile">Search For a Branch</string>
    <string name="select_search_method_description">Click to search for a branch by address/service/branch name</string>
    <string name="search_by_branch_address_title">Enter the branch address below</string>

    <string name="search_by_branch_service_title">Select the service offered below</string>
    <string name="select_search_parameters_title">Select the search type below</string>


    <string name="button_search_by_branch_address">Search Branches By Address</string>
    <string name="button_search_by_service_offered">Search Branches By Service Offered</string>
    <string name="button_search_by_branch_hours">Search Branches by Open Hours</string>

    <string name="select_branch_by_name_and_service_title">Select the branch, then the service offered by the branch</string>
</resources>