<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252922"
    tools:context=".BranchMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="cursive"
            android:gravity="center|center_vertical"
            android:text="@string/welcome"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/service_novigrad"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/messageDisplayBranchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#C5C5C5"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_ServicesOffered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/services_offered" />

        <Button
            android:id="@+id/btn_ServiceRequests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/service_requests" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="189dp" />

        <Button
            android:id="@+id/btn_HoursOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onHoursOpen"
            android:text="@string/hours_open" />

    </LinearLayout>
</RelativeLayout>