<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#252922"
                android:foregroundTint="#FFFFFF"
                tools:context=".CDisplayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/to"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/service_novigrad"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/messageDisplayID"
            android:layout_width="282dp"
            android:layout_height="134dp"
            android:layout_margin="60dp"
            android:gravity="center"
            android:background="#FFFFFF"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:fontFamily="sans-serif"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />

        <Button
            android:id="@+id/serivceListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onServicesList"
            android:text="@string/to_services_list" />

        <Button
            android:id="@+id/employeeListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onEmployeeList"
            android:text="@string/to_branch_list" />

        <Button
            android:id="@+id/customerListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onCustomerList"
            android:text="@string/to_customer_list" />
    </LinearLayout>

</RelativeLayout>