<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#252922"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="65dp"
            android:height="35sp"
            android:fontFamily="cursive"
            android:text="@string/services_list"
            android:textAlignment="center"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/listViewServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_addService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_new" />

            <Button
                android:id="@+id/btn_editService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit" />

            <Button
                android:id="@+id/btn_removeService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remove" />

        </LinearLayout>

        <TextView
            android:id="@+id/redirectAdminWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2571AE"
            android:backgroundTint="#268A80"
            android:clickable="true"
            android:linksClickable="false"
            android:longClickable="false"
            android:onClick="onToWelcome"
            android:text="@string/back_to_welcome_screen"
            android:textColor="@android:color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>