<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252922"
    tools:context=".AdminCustomerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="65dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="65dp"
            android:height="35sp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/customer_list"
            android:textAlignment="center"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/redirectAdminWelcome3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2571AE"
            android:backgroundTint="#268A80"
            android:clickable="true"
            android:linksClickable="false"
            android:longClickable="false"
            android:onClick="onToWelcome"
            android:text="@string/back_to_welcome_screen"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/delet_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_intructions"
            android:textColor="#DFD3D3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDeleteCustomer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_of_customers"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>