<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252922"
    tools:context=".AdminEmployeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="65dp"
            android:height="35sp"
            android:fontFamily="cursive"
            android:text="@string/branch_list"
            android:textAlignment="center"
            android:textColor="#94E2EC"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/redirectAdminWelcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#2571AE"
            android:backgroundTint="#268A80"
            android:clickable="true"
            android:focusable="true"
            android:linksClickable="false"
            android:longClickable="false"
            android:onClick="onToWelcome"
            android:text="@string/back_to_welcome_screen"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/delet_instructions2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_intructions"
            android:textAlignment="center"
            android:textColor="#DFD3D3" />

        <ListView
            android:id="@+id/list_of_employees"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</RelativeLayout>